--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
         <section class="about" id="about">
             <div class="container">
                 <h2>О нас</h2>
-                <p>🚗 Carjet Auto – ваш надежный автомобильный маркетплейс в Беларуси!</p>
+                <p> Carjet Auto – ваш надежный автомобильный маркетплейс в Беларуси!</p>
 
                 <p> Мы – команда профессионалов, которая знает всё о покупке и продаже автомобилей в РБ. Carjet Auto – это современный онлайн-магазин, где вы найдете лучшие предложения на новые и подержанные авто от проверенных продавцов со всей Беларуси.</p>
                     
                 <p> Почему выбирают нас?</p>
-                <p>  ✔ Большой выбор авто – У нас представлены тысячи автомобилей: от бюджетных моделей до премиальных новинок.</p>
-                <p>  ✔ Только проверенные продавцы – Мы сотрудничаем с официальными дилерами и частными продавцами с хорошей репутацией.</p>
-                <p> ✔ Прозрачность сделки – Полная информация о состоянии машины, истории обслуживания и честная цена.</p>
-                <p> ✔ Финансовая и юридическая безопасность – Помогаем с оформлением документов, кредитом и страховкой.</p>
-                <p> Carjet Auto – покупайте и продавайте автомобили в Беларуси быстро, выгодно и безопасно!</p>
+                <p>   Большой выбор авто – У нас представлены тысячи автомобилей: от бюджетных моделей до премиальных новинок.</p>
+                <p>  Только проверенные продавцы – Мы сотрудничаем с официальными дилерами и частными продавцами с хорошей репутацией.</p>
+                <p>  Прозрачность сделки – Полная информация о состоянии машины, истории обслуживания и честная цена.</p>
+                <p>  Финансовая и юридическая безопасность – Помогаем с оформлением документов, кредитом и страховкой.</p>
+                <p> Carjet Auto – покупайте и продавайте автомобили быстро, выгодно и безопасно!</p>
                 
             </div>
         </section>
